Maja theme complete

--- a/custom/majalorkowska-com/input/themes/mercury-override/partials/navbar.hbs
+++ b/custom/majalorkowska-com/input/themes/mercury-override/partials/navbar.hbs
@@ -1,39 +1,67 @@
 <header class="header" id="js-header">
+  <a href="{{@website.url}}" class="logo">
+    <div class="header__logo--container"
+      id="logo">
+      <div class="header__logo">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 400 229" height="100%" class="header__logo">
+        <g id="drawneye" clip-path="url(#clip-drawneye)">
+            <g id="Group_8" data-name="Group 8" transform="translate(-57.892 -107.261)">
+                <g id="Ellipse_1" data-name="Ellipse 1" transform="translate(298.892 297.261)" stroke="var(--c-logo)"
+                    stroke-width="1">
+                    <circle cx="10.5" cy="10.5" r="10.5" stroke="var(--c-logo)" />
+                    <circle cx="10.5" cy="10.5" r="10" fill="var(--c-logo)" />
+                </g>
+                <path id="logo_bottom"
+                    d="M3044.892,194.2l9.867,16.814s36.287,14.6,68.026,14.4,67.668-15.119,67.668-15.119L3199.3,194.2s-49.859,20.977-76.513,19.756-60.021-13.632-60.021-13.632"
+                    transform="translate(-2816.407 66.282)" fill="var(--c-logo)" />
+                <path id="logo_top"
+                    d="M2961.951,175.5s19.427,30.016,53.279,34.34c14.546,2.917,54.325,8.342,91.987-29.87,12.069-9.834,22.071-19.45,47.382-28.161s48.191-8.37,71.074-3.576,42.019,13.857,56.323,25.032,21.9,19.221,31.737,30.843S3343.8,207.6,3343.8,207.6s-2.628-3.89-24.252-29.867c-11.025-11.948-18.822-19.587-29.806-26.034-11.292-6.631-23.533-12.308-41.268-18.22-33.525-11.175-70.18-11.622-93.871-4.47s-46.488,19.668-67.5,40.23-35.761,32.184-66.157,25.032A456.776,456.776,0,0,1,2961.951,175.5Z"
+                    transform="translate(-2895 0)" fill="var(--c-logo)" />
+            </g>
+        </g>
+        </svg>
+    </div>
 
-   <a href="{{@website.url}}" class="logo">
-      {{#if @website.logo}}
-         <img src="{{@website.logo}}" alt="{{@website.name}}" width="{{@website.logoSize.width}}" height="{{@website.logoSize.height}}">
-      {{else}}
-         {{@website.name}}
-      {{/if}}
-   </a>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 263.291 220.892" class="blob blob1-1">
+        <path id="blob1_1" data-name="blob1_1" d="M113,0c70.578,35.413,113,28.654,113,64s-50.592,64-113,64S0,99.346,0,64,42.422-35.413,113,0Z" transform="translate(54.095 9.373) rotate(25)"/>
+    </svg>
 
-   {{#checkIfAny menus.mainMenu @config.custom.search}}     
-      {{#if menus.mainMenu}}
-         <nav class="navbar js-navbar">
-            <button class="navbar__toggle js-toggle" aria-label="{{ translate 'partials.menu.menu' }}">
-               <span class="navbar__toggle-box">
-                  <span class="navbar__toggle-inner">{{ translate 'partials.menu.menu' }}</span>
-               </span>
-            </button>
-            {{> menu menus.mainMenu}}
-         </nav>
-      {{/if}}
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 155.828 173.087" class="blob blob1-2">
+        <path id="blob1_2" data-name="blob1_2" d="M73.866-1.528C99.339,53.879,149,23.062,149,53.4s-34.141,64.514-75.132,54.923c-8.18-1.914-29.689-1.8-45.382-13.114C11.979,83.3,1.446,59.786-1.266,53.4c-4-9.431,5.548-32.556,19.685-50.334C35.652-18.611,59.805-32.112,73.866-1.528Z" transform="translate(47.469 167.243) rotate(-101)"/>
+    </svg>
+    </div>
+  </a>
 
-      {{#if @config.custom.searchFeature}}
-         <div class="search">
-            <div class="search__overlay js-search-overlay">
-               {{{@customSearchInput}}} 
-            </div>
-            <button
-               class="search__btn js-search-btn"
-               aria-label="{{ translate 'search.search' }}">
-               <svg role="presentation" focusable="false" height="15" width="15">
-                  <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#search"/>
-               </svg>
-            </button>
-         </div>
-      {{/if}}      
-   {{/checkIfAny}}
-   
+  {{#checkIfAny menus.mainMenu
+  @config.custom.search}}
+  {{#if menus.mainMenu}}
+  <nav class="navbar js-navbar">
+    <button class="navbar__toggle js-toggle"
+      aria-label="{{ translate 'partials.menu.menu' }}">
+      <span class="nav__icon" id="nav__button">
+        Menu
+      </span>
+    </button>
+    {{> menu menus.mainMenu}}
+  </nav>
+  {{/if}}
+
+  {{#if @config.custom.searchFeature}}
+  <div class="search">
+    <div
+      class="search__overlay js-search-overlay">
+      {{{@customSearchInput}}}
+    </div>
+    <button class="search__btn js-search-btn"
+      aria-label="{{ translate 'search.search' }}">
+      <svg role="presentation" focusable="false"
+        height="15" width="15">
+        <use
+          xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#search" />
+      </svg>
+    </button>
+  </div>
+  {{/if}}
+  {{/checkIfAny}}
+
 </header>
