--- a/custom/majalorkowska-com/input/themes/mercury-override/index.hbs
+++ b/custom/majalorkowska-com/input/themes/mercury-override/index.hbs
@@ -1,128 +1,34 @@
 {{> head}}
 {{> navbar}}
-{{#checkIf @config.custom.frontSource '==' "post" }}
-   {{> frontpage-post}}
-{{else}}
-   <main>
-      <div class="hero wrapper">
-         {{{@config.custom.textHero}}}
+</div>
+<div class="homehero__topfiller"></div>
+<div class="homehero">
+  <div class="homehero__blend">
+    <div class="homehero__msgcontainer">
+      <div class="homehero__msg homehero__ani">
+        <span class="homehero__msg__heading">Maja
+          Lorkowska</span><br>
+        <span
+          class="homehero__msg__subheading">ma-ya
+          lor-kov-ska.</span>
       </div>
-      {{#checkIfAll @config.custom.filters tags}}
-         <nav class="filter">
-            <ul class="filter__button-group">
-               {{#if @config.custom.filtersLabel}}
-                  <li>
-                     <strong>{{@config.custom.filtersLabel}}</strong>
-                  </li>
-               {{/if}}
-               {{#if @config.custom.filtersAllPhrase}}
-                  <li>
-                     <button class="filter__item is-active" data-filter="*">{{@config.custom.filtersAllPhrase}}</button>
-                  </li>
-               {{/if}}
-               {{#each tags}}
-                  <li>
-                     <button class="filter__item" data-filter=".{{slug}}">{{name}}</button>
-                  </li>
-               {{/each}}
-            </ul>
-         </nav>
-      {{/checkIfAll}}
-      {{#checkIf @config.custom.cardsLayout '==' "compact" }}
-         <div class="l-col l-col{{@config.custom.layoutFrontpage}}">
-            {{#each posts}}
-               <section
-                  class="c-card{{#isFeatured}} c-card--compact c-card--featured{{/isFeatured}}
-                     {{#checkIf @config.custom.filtersType '=='"maintag"}} 
-                        {{#if mainTag}}{{ mainTag.slug }}{{/if}}
-                     {{else}}
-                        {{#each tags}} {{slug}} {{/each}}
-                     {{/checkIf}}">
-                  <a href="{{url}}" class="c-card__link">
-                     {{#featuredImage}}     
-                       {{#if url}}                 
-                           <div class="c-card__header">
-                              <img
-                                 src="{{url}}"
-                                 {{#if @config.site.responsiveImages}}
-                                    {{responsiveImageAttributes 'featuredImage' srcset.cards sizes.cards}}
-                                 {{/if}}
-                                 {{ lazyload "lazy" }}
-                                 height="{{height}}"
-                                 width="{{width}}"
-                                 alt="{{alt}}">
-                           </div>   
-                       {{/if}}                     
-                     {{/featuredImage}}
-                     <div class="c-card__body c-card__body--compact">
-                        <div class="c-card__text c-card__text--compact">
-                           <h2>
-                              {{title}}
-                           </h2>
-                           {{#if @config.custom.cardsDate}}
-                              <time datetime="{{date createdAt 'YYYY-MM-DDTHH:mm'}}">
-                                 {{#checkIf @config.custom.formatDate '!=' 'custom'}}
-                                    {{date createdAt @config.custom.formatDate}}
-                                 {{else}}
-                                    {{date createdAt @config.custom.formatDateCustom}}
-                                 {{/checkIf}}
-                              </time>
-                           {{/if}}
-                        </div>
-                     </div>
-                  </a>
-               </section>
-            {{/each}}
-         </div>
-      {{else}}
-         <div class="l-col l-col{{@config.custom.layoutFrontpage}}">
-            {{#each posts}}
-               <section
-                  class="c-card{{#isFeatured}} c-card--featured{{/isFeatured}} 
-                     {{#checkIf @config.custom.filtersType '=='"maintag"}} 
-                        {{#if mainTag}}{{ mainTag.slug }}{{/if}}
-                     {{else}}
-                        {{#each tags}} {{slug}} {{/each}}
-                     {{/checkIf}}
-                  ">
-                  <a href="{{url}}" class="c-card__link">
-                     {{#featuredImage}}
-                        {{#if url}} 
-                           <div class="c-card__header">
-                              <img
-                                 src="{{url}}"
-                                 {{#if @config.site.responsiveImages}}
-                                    {{responsiveImageAttributes 'featuredImage' srcset.cards sizes.cards}}
-                                 {{/if}}
-                                 {{ lazyload "lazy" }}
-                                 height="{{height}}"
-                                 width="{{width}}"
-                                 alt="{{alt}}">
-                           </div> 
-                        {{/if}} 
-                     {{/featuredImage}}
-                     <div class="c-card__body">
-                        <div class="c-card__text">
-                           <h2>
-                              {{title}}
-                           </h2>
-                           {{#if @config.custom.cardsDate}}
-                              <time datetime="{{date createdAt 'YYYY-MM-DDTHH:mm'}}">
-                                 {{#checkIf @config.custom.formatDate '!=' 'custom'}}
-                                    {{date createdAt @config.custom.formatDate}}
-                                 {{else}}
-                                    {{date createdAt @config.custom.formatDateCustom}}
-                                 {{/checkIf}}
-                              </time>
-                           {{/if}}
-                        </div>
-                     </div>
-                  </a>
-               </section>
-            {{/each}}
-         </div>
-      {{/checkIf}}
-      {{> pagination}}
-   </main>
-{{/checkIf}}
+    </div>
+  </div>
+  <div
+    class="homehero homehero__ani homehero__diag">
+  </div>
+</div>
+<div class="container home__container">
+  {{!-- <div class="home__headline wordCarousel">
+    <span>Maja is </span>
+    <div>
+      <ul class="flip4">
+        <li>a roller skater</li>
+        <li>an editor</li>
+        <li>a writer</li>
+        <li>an artist</li>
+      </ul>
+    </div>
+    <br>based in Liverpool.
+  </div> --}}
 {{> footer}}
